--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
-    "react-parallax-mouse": "^2.1.0"
+    "react-parallax-mouse": "^2.1.0",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
