--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
+    "react-markdown": "^8.0.6",
     "react-parallax-mouse": "^2.1.0",
     "swiper": "^11.1.12"
   },
